--- a/src/com/dbc/moduloTres/pessoaapi/pom.xml
+++ b/src/com/dbc/moduloTres/pessoaapi/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.dbc</groupId>
 	<artifactId>pessoaapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>pessoa-api</name>
+	<name>pessoaEntity-api</name>
 	<description>Projeto para criação e atualização de dados de pessoas</description>
 	<properties>
 		<java.version>11</java.version>
@@ -33,10 +33,19 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
